hopefully fixes not having access to /tmp

--- a/java/21/Dockerfile
+++ b/java/21/Dockerfile
@@ -27,12 +27,14 @@ LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 LABEL       org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
 LABEL       org.opencontainers.image.licenses=MIT
 
-RUN 				apt-get update -y \
-						&& apt-get install -y lsof curl ca-certificates openssl git tar sqlite3 fontconfig libfreetype6 tzdata iproute2 libstdc++6 git-lfs \
-						&& useradd -d /home/container -m container
+RUN         apt-get update -y \
+            && apt-get install -y lsof curl ca-certificates openssl git tar sqlite3 fontconfig libfreetype6 tzdata iproute2 libstdc++6 git-lfs \
+            && useradd -d /home/container -m container \
+            && mkdir -p /tmp \
+            && chmod 1777 /tmp  # Ensure /tmp has the correct permissions (rwxrwxrwt)
 
 USER        container
-ENV         USER=container HOME=/home/container
+ENV         USER=container HOME=/home/container TMPDIR=/tmp  # Set TMPDIR to /tmp if needed
 WORKDIR     /home/container
 
 COPY        ./../entrypoint.sh /entrypoint.sh
