--- a/java/21/Dockerfile
+++ b/java/21/Dockerfile
@@ -34,7 +34,7 @@ RUN         apt-get update -y \
             && chmod 1777 /tmp  # Ensure /tmp has the correct permissions (rwxrwxrwt)
 
 USER        container
-ENV         USER=container HOME=/home/container TMPDIR=/tmp
+ENV         USER=container HOME=/home/container TMPDIR=/home/container/tmp
 WORKDIR     /home/container
 
 COPY        ./../entrypoint.sh /entrypoint.sh
